# snfrd

./: .env_exmpl  .gitignore  ftp_connection.py  pyproject.toml
core/: settings.py  urls.py
courses/: admin.py  models.py  urls.py  views.py
courses/api/: new_lecture_services.py  services.py  urls.py  views.py
courses/management/commands/: create_week_days.py
courses/migrations/: 0001_initial.py  0002_alter_lecture_attacments.py  0002_course_weeks.py  0003_lecture_number.py  0003_week_week_number.py  0004_alter_lecture_day.py  0004_remove_lecture_day.py  0005_alter_course_id.py  0005_alter_lecture_options.py  0006_alter_lecture_options_remove_lecture_number_and_more.py  0007_alter_lecture_day.py  0008_alter_attachment_name_alter_course_days_and_more.py  0009_alter_attachment_file.py
courses/templatetags/: course.py  course_table.py  table.py
ftp_conn/: __init__.py  admin.py  apps.py  connection.py  models.py  services.py  urls.py  views.py
ftp_conn/migrations/: 0001_initial.py  0002_alter_ftpserver_port.py
ftp_server_example/: server.py
static/css/: main.css
static/js/: add_column.js  add_file_to_lec.js  add_lecture.js  add_row.js  change_about.js  edit_lecture.js
templates/: base.html  index.html
templates/courses/: about_block.html  course.html  navbar.html  t_head.html  t_row.html  table.html
templates/courses/admin/: about_block.html  course.html  table.html
