[tool.poetry]
name = "Standford courses site"
version = "0.1.0"
description = ""
authors = ["DBWtv <dima.bwc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyftpdlib = "^1.5.9"
Django = "^4.2.7"
python-dotenv = "^1.0.0"
cryptography = "^41.0.7"
django-storages = "^1.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
